fix places where class was mis typed

--- a/app/views/teacher/homeworks/index.html.erb
+++ b/app/views/teacher/homeworks/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class="center h-3-spacings white-text">
+<h3 class="center h-3-spacing white-text">
   <%= @student.name %><span class="thin">'s homework assignments:</span>
 </h3>
 <div class="row">
