--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -1,4 +1,4 @@
-<h3 class="center h-3-spacings white-text button-spacing">
+<h3 class="center h-3-spacing white-text button-spacing">
   Sign up for your <%= current_user.plan %> account
 </h3>
 <div class="row button-spacing">
