--- a/app/views/parent/homeworks/index.html.erb
+++ b/app/views/parent/homeworks/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class="center h-3-spacings white-text">
+<h3 class="center h-3-spacing white-text">
   <%= @child.name %><span class="thin">'s homework assignments:</span>
 </h3>
 <ul>
