--- a/app/views/teacher/lessons/new.html.erb
+++ b/app/views/teacher/lessons/new.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row button-spacing">
   <div class="col m12 s12 white-text">
-    <div class="card-panel hoverable">
+    <div class="card-panel hoverable grad">
       <%= render 'form', lesson: @lesson %>
     </div>
   </div>
