--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s10 offset-s1 home-card">
+  <div class="col s12 home-card">
     <div class="card hoverable bg-image color-overlay">
       <div class="card-content white-text">
         <h1 class="center big-text">Muse</h1>
