--- a/app/views/teacher/students/index.html.erb
+++ b/app/views/teacher/students/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.students.length == 0 %>
   <h4 class="h-3-spacing center grey-text">Hmm... It looks like you don't have any students yet.</h4>
   <div class="center">
-    <img style="-webkit-user-select: none" src="https://cdn0.iconfinder.com/data/icons/emoji-faces-3/32/emotion_expression_emoji_thinking-128.png">
+    <img style="-webkit-user-select: none" src="http://icons.veryicon.com/ico/System/Icons8%20Metro%20Style/Emoticons%20Sad.ico">
   </div>
   <h4 class="center grey-text">Hey, you should ADD STUDENT!</h4>
 <% else %>
