--- a/app/views/student/homeworks/index.html.erb
+++ b/app/views/student/homeworks/index.html.erb
@@ -1,6 +1,6 @@
 <h3 class="center h-3-spacing white-text thin">
   Hello <span class="thick"><%= current_user.name %></span><br>
-  Here are your assignemnts
+  Here are your assignments
 </h3>
 
 <ul>
