fix grammer and spelling

--- a/app/views/teacher/students/index.html.erb
+++ b/app/views/teacher/students/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <h4 class="center grey-text">Hey, you should ADD STUDENT!</h4>
 <% else %>
-  <h3 class="h-3-spacing center white-text">all of your wonderful students</h3>
+  <h3 class="h-3-spacing center white-text">All of your wonderful students</h3>
   <div class="row">
     <div class="col s6">
       <%= link_to [:new, :teacher, :student],
