--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,8 +6,8 @@
         <h4 class="center-align sub-title-weight">Making Private Lessons Easier!</h4>
         <p class="center-align home-card-p home-page-desc">Tired of teaching students and having them never do their homework? <br>
         Tired of parents complaining that their child isn't learning anything when you know it's because they don't practice? <br>
-        Tired of trying to keep track of you many students with paper/whatever sill note tool is on your phone? <br> <br>
-        <strong>this app will solve all those problems!</strong>
+        Tired of trying to keep track of your many students with paper? <br> <br>
+        <strong>This app will solve all those problems!</strong>
         </p>
       </div>
       <div class="center">
